--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -4,4 +4,6 @@
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFFFF</color> <!-- 白色 -->
     
+    <color name="red">#FFFF0000</color>
+    
 </resources>
