--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:id="@+id/photo_editor_root_view">
 
     <RelativeLayout
         android:id="@+id/photo_editor_top_bar"
@@ -110,5 +111,12 @@
             android:background="@color/transparent">
         </RelativeLayout>
     </RelativeLayout>
-
+    
+    <FrameLayout android:id="@+id/photo_editor_context_menu_container"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_above="@id/photo_editor_bottom_bar"
+        android:visibility="gone"></FrameLayout>
+    
+  
 </RelativeLayout>
