调通api，并实现流程

--- a/res/layout/photo_editor.xml
+++ b/res/layout/photo_editor.xml
@@ -18,96 +18,74 @@
             android:text="@string/photo_editor_top_bar_camera" >
         </Button>
 
-        <Button
+       <!--  <Button
             android:id="@+id/photo_editor_top_bar_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="@string/photo_editor_top_bar_reset" >
-        </Button>
+        </Button> -->
+        <LinearLayout android:id="@+id/photo_editor_topbar_object_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:visibility="gone"
+            android:orientation="horizontal">
+            <TextView android:id="@+id/photo_editor_top_bar_object_modify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/photo_editor_top_bar_modify"
+                android:layout_margin="5dp"></TextView>
+            <TextView android:id="@+id/photo_editor_top_bar_object_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/photo_editor_top_bar_delete"
+                android:layout_margin="5dp"></TextView>
+            <TextView android:id="@+id/photo_editor_top_bar_object_eraser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/photo_editor_top_bar_eraser"
+                android:layout_margin="5dp"></TextView>
+        </LinearLayout>
+        <TextView android:id="@+id/photo_editor_topbar_modify_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:text="@string/photo_editor_top_bar_finish"
+            android:layout_marginRight="10dp"></TextView>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/photo_editor_bottom_bar"
+    <LinearLayout android:id="@+id/photo_editor_bottom_panel"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/photo_editor_bottom_bar_height"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal" >
-
-        <RelativeLayout
-            android:id="@+id/photo_editor_tab_scene"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="@string/photo_editor_tab_scene" >
-            </TextView>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/photo_editor_tab_widget"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="@string/photo_editor_tab_widget" >
-            </TextView>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/photo_editor_tab_text"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="@string/photo_editor_tab_text" >
-            </TextView>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/photo_editor_tab_finish"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="@string/photo_editor_tab_finish" >
-            </TextView>
-        </RelativeLayout>
+        android:orientation="vertical">
+        <com.canruoxingchen.uglypic.view.HorizontalListView android:id="@+id/photo_editor_footage_types_list"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"></com.canruoxingchen.uglypic.view.HorizontalListView>
+        <com.canruoxingchen.uglypic.view.HorizontalListView android:id="@+id/photo_editor_footage_list"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"></com.canruoxingchen.uglypic.view.HorizontalListView>
     </LinearLayout>
     
     <View android:id="@+id/photo_editor_edit_panel_ref_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/photo_editor_bottom_bar"
+        android:layout_above="@id/photo_editor_bottom_panel"
         android:layout_below="@id/photo_editor_top_bar"></View>
 
-    <RelativeLayout
+    <com.canruoxingchen.uglypic.view.SquareRelativeLayout
         android:id="@+id/photo_editor_edit_panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/photo_editor_bottom_bar"
+        android:layout_above="@id/photo_editor_bottom_panel"
         android:layout_below="@id/photo_editor_top_bar">
 
         <uk.co.senab.photoview.PhotoView
             android:id="@+id/photo_editor_photo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" >
         </uk.co.senab.photoview.PhotoView>
 
         <RelativeLayout
@@ -116,13 +94,21 @@
             android:layout_height="match_parent" 
             android:background="@color/transparent">
         </RelativeLayout>
-    </RelativeLayout>
+    </com.canruoxingchen.uglypic.view.SquareRelativeLayout>   
     
-    <FrameLayout android:id="@+id/photo_editor_context_menu_container"
+    <Button android:id="@+id/photo_editor_context_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/photo_editor_context_btn_share"
+        android:layout_above="@id/photo_editor_bottom_panel"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp"></Button>
+    
+   <FrameLayout android:id="@+id/photo_editor_context_menu_container"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_above="@id/photo_editor_bottom_bar"
+        android:layout_alignParentBottom="true"
         android:visibility="gone"></FrameLayout>
-    
   
 </RelativeLayout>
