--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -30,39 +30,6 @@
         android:paddingLeft="5dip"
         android:paddingRight="5dip" >
 
-        <RelativeLayout
-            android:id="@+id/rl_exit"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/camera_titlebar_bg"
-            android:clickable="true"
-            android:paddingLeft="5dip"
-            android:paddingRight="5dip" >
-
-            <ImageView
-                android:id="@+id/iv_exit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:background="@null"
-                android:contentDescription="camera_iv_exit"
-                android:src="@drawable/camera_close" />
-
-            <TextView
-                android:id="@+id/tv_exit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="3dip"
-                android:layout_toRightOf="@id/iv_exit"
-                android:background="@null"
-                android:contentDescription="camera_tv_exit"
-                android:text="@string/camera_btn_close"
-                android:textColor="@color/camera_button_text"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -75,7 +42,7 @@
                 android:layout_width="48dip"
                 android:layout_height="48dip"
                 android:layout_marginRight="4dip"
-                android:background="@drawable/camera_titlebar_bg"
+                android:background="@null"
                 android:contentDescription="camera_ib_flash_on_off"
                 android:src="@drawable/camera_flash_on" />
 
@@ -83,7 +50,7 @@
                 android:id="@+id/ib_camera_next"
                 android:layout_width="48dip"
                 android:layout_height="48dip"
-                android:background="@drawable/camera_titlebar_bg"
+                android:background="@null"
                 android:contentDescription="camera_ib_camera_next"
                 android:src="@drawable/camera_switch" />
         </LinearLayout>
@@ -94,14 +61,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:background="#FF302A22" >
+        android:background="@null" >
 
         <ImageButton
             android:id="@+id/ib_capture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/camera_capture"
+            android:src="@drawable/camera_capture"
+            android:background="@null"
             android:contentDescription="camera_ib_capture" />
 
         <com.canruoxingchen.uglypic.cache.AsyncImageView
