--- a/res/values/msg_what.xml
+++ b/res/values/msg_what.xml
@@ -10,5 +10,11 @@
     <item name="msg_load_local_footage_failure" type="id"></item>
     <item name="msg_load_footage_icon_success" type="id"/>
     <item name="msg_load_footage_icon_failure" type="id"></item>
+    <item name="msg_load_local_scenes_success" type="id"/>
+    <item name="msg_load_local_scenes_failure" type="id"></item>
+    <item name="msg_load_scenes_success" type="id"/>
+    <item name="msg_load_scenes_failure" type="id"></item>
+    
+    <item name="msg_editor_regret_status_change" type="id"></item>
     
 </resources>
