--- a/res/layout/publish.xml
+++ b/res/layout/publish.xml
@@ -16,5 +16,32 @@
             android:layout_height="match_parent"
             android:gravity="top|left"></EditText>
     </LinearLayout>
+    
+    <RelativeLayout android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/publish_include_origin_image"/>
+        <com.canruoxingchen.uglypic.view.SlipButton
+            android:id="@+id/publish_slip_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"></com.canruoxingchen.uglypic.view.SlipButton>
+    </RelativeLayout>
+    
+    <TextView android:id="@+id/publish_share_to_weibo"
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:text="@string/publish_share_to_weibo"></TextView>
+    <TextView android:id="@+id/publish_share_to_weixin"
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:text="@string/publish_share_to_weixin"></TextView>
+    <TextView android:id="@+id/publish_share_to_friends"
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:text="@string/publish_share_to_friends"></TextView>
 
 </LinearLayout>
