替换大部分UI

--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FF302A22" >
+    android:background="@color/default_background" >
 
     <com.canruoxingchen.uglypic.camera.PmCameraRender
         android:id="@+id/camera_surface"
@@ -26,10 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="48dip"
         android:layout_alignParentTop="true"
-        android:background="#FF302A22"
         android:paddingLeft="5dip"
         android:paddingRight="5dip" >
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,13 +72,12 @@
 
         <com.canruoxingchen.uglypic.cache.AsyncImageView
             android:id="@+id/ib_choose_photo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="50dip"
             android:layout_toLeftOf="@id/ib_capture"
             android:scaleType="centerCrop"
-            android:background="@drawable/camera_choose_gallery"
             android:contentDescription="camera_ib_choose_photo" />
     </RelativeLayout>
 
