--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -4,14 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <com.canruoxingchen.uglypic.cache.AsyncImageView android:id="@+id/footage_item_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-    	android:scaleType="centerCrop"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+    	android:scaleType="fitCenter"/>
 
     <TextView android:id="@+id/footage_item_name"
-        android:layout_width="58dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/default_text_color"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"></TextView>
 </LinearLayout>
