--- a/res/layout/footage_type_item.xml
+++ b/res/layout/footage_type_item.xml
@@ -6,7 +6,8 @@
 
     <TextView android:id="@+id/footage_type_item_name"
         android:layout_width="80dp"
-        android:layout_height="match_parent"
+        android:layout_height="40dp"
+        android:textColor="@color/default_text_color"
         android:gravity="center"></TextView>
 
 </LinearLayout>
