--- a/res/layout/photo_editor_editor_view_container.xml
+++ b/res/layout/photo_editor_editor_view_container.xml
@@ -3,20 +3,22 @@
     android:id="@+id/photo_editor_editor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/photo_editor_editor_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="44dp" 
-        android:background="#FF0000FF">
+        android:layout_height="44dp"
+        android:background="@color/default_background" >
 
         <Button
             android:id="@+id/photo_editor_editor_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="返回" >
+            android:background="@null"
+            android:text="取消"
+            android:textColor="@color/default_text_color" >
         </Button>
 
         <Button
@@ -24,7 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="完成" >
+            android:background="@null"
+            android:text="确定"
+            android:textColor="@color/default_text_color" >
         </Button>
 
         <View
@@ -39,7 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/photo_editor_editor_top_bar_splitter"
-            android:text="撤销" >
+            android:background="@null"
+            android:text="上一步"
+            android:textColor="@color/default_text_color" >
         </Button>
 
         <Button
@@ -47,7 +53,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/photo_editor_editor_top_bar_splitter"
-            android:text="重做" >
+            android:background="@null"
+            android:text="下一步"
+            android:textColor="@color/default_text_color" >
         </Button>
     </RelativeLayout>
 
