--- a/res/layout/footage_item.xml
+++ b/res/layout/footage_item.xml
@@ -2,19 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical" >
     <com.canruoxingchen.uglypic.cache.AsyncImageView android:id="@+id/footage_item_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
     	android:scaleType="fitCenter"/>
 
-    <TextView android:id="@+id/footage_item_name"
+    <!-- <TextView android:id="@+id/footage_item_name"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:textColor="@color/default_text_color"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:gravity="center"></TextView>
+        android:gravity="center"></TextView> -->
 </LinearLayout>
