--- a/res/values/prefs.xml
+++ b/res/values/prefs.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="pref_last_load_footage_type_time">last_load_footage_type_time</string>
+    
+    <!-- 微博信息 -->
+    <string name="pref_weibo_access_token">pref_weibo_access_token</string>
+    <string name="pref_weibo_uid">pref_weibo_uid</string>
+    <string name="pref_weibo_expires_in">pref_weibo_expires_in</string>
 </resources>
