替换大部分UI，还差擦除页面

--- a/res/layout/image_overlay_context_menu.xml
+++ b/res/layout/image_overlay_context_menu.xml
@@ -38,11 +38,14 @@
             android:text="@string/image_menu_satuation" >
         </Button>
     </LinearLayout>
-
+	<View android:layout_width="match_parent"
+	    android:layout_height="1dp"
+        android:layout_below="@id/image_params"
+	    android:id="@+id/splitter"></View>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/image_params"
+        android:layout_below="@id/splitter"
         android:background="#1DB32A">
 
         <SeekBar
