--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:raiv="http://schemas.android.com/apk/res/com.canruoxingchen.uglypic"
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -70,13 +71,15 @@
             android:background="@null"
             android:contentDescription="camera_ib_capture" />
 
-        <com.canruoxingchen.uglypic.cache.AsyncImageView
+        <com.canruoxingchen.uglypic.view.RoundAngleImageView
             android:id="@+id/ib_choose_photo"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="50dip"
             android:layout_toLeftOf="@id/ib_capture"
+            raiv:roundWidth="15dp"
+            raiv:roundHeight="15dp"
             android:scaleType="centerCrop"
             android:contentDescription="camera_ib_choose_photo" />
     </RelativeLayout>
